style: fix z-index

--- a/assets/header-style.css
+++ b/assets/header-style.css
@@ -194,7 +194,7 @@
 .cart {
     width: 42px;
     height: 36px;
-    z-index: 100;
+    z-index: 999;
 }
 
 .mobile-style .search-bar {
@@ -229,7 +229,7 @@ nav {
     left: 0;
     height: 100%;
     width: 0%;
-    z-index: 10;
+    z-index: 200;
     opacity: 0;
 
     transition: all 600ms cubic-bezier(.62, .04, .3, 1.56);
